--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
 
 <!-- <link rel="shortcut icon" href="https://img.icons8.com/color/48/000000/google-keep.png"/> -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="manifest" href="/manifest.json">
+  
 </head>
 <body>
   <app-root></app-root>
